Session: change language variables to gettext in the automatic notification on subscription to a session - refs BT#21737

--- a/public/main/template/default/mail/content_subscription_to_session_confirmation.html.twig
+++ b/public/main/template/default/mail/content_subscription_to_session_confirmation.html.twig
@@ -1,5 +1,5 @@
 <p>{{ 'Dear'|get_lang }} {{ complete_name }},</p>
-<p>{{ 'YouAreRegisterToSessionX'|get_lang|format(session_name) }}</p>
-<p>{{ 'Address'|get_lang }}  {{ _s.site_name }} {{ 'Is'|get_lang }} : {{ _p.web }}</p>
-<p>{{ 'Problem'|get_lang }}</p>
-<p>{{ 'SignatureFormula'|get_lang }}</p>
+<p>{{ 'You are registered to session: %s.'|get_lang|format(session_name) }}</p>
+<p>{{ 'The address of'|get_lang }}  {{ _s.site_name }} {{ 'is'|get_lang }} : {{ _p.web }}</p>
+<p>{{ 'In case of trouble, contact us.'|get_lang }}</p>
+<p>{{ 'Sincerely'|get_lang }}</p>
