Session: change language variable to gettext in the automatic notification on subscription to a session in subject - refs BT#21737

--- a/public/main/template/default/mail/subject_subscription_to_session_confirmation.html.twig
+++ b/public/main/template/default/mail/subject_subscription_to_session_confirmation.html.twig
@@ -1,1 +1,1 @@
-{{ '[' ~ _s.site_name ~ '] ' ~ 'YourReg'|get_lang ~ ' ' ~ _s.site_name }}
+{{ '[' ~ _s.site_name ~ '] ' ~ 'Your registration on'|get_lang ~ ' ' ~ _s.site_name }}
