--- a/public/main/template/default/mail/new_user_mail_to_admin_approval.html.twig
+++ b/public/main/template/default/mail/new_user_mail_to_admin_approval.html.twig
@@ -1,14 +1,14 @@
-<h4>{{ 'ApprovalForNewAccount'|get_lang }}</h4>
+<h4>{{ 'Approval for new account'|get_lang }}</h4>
 <ul>
     <li>{{ 'Username'|get_lang }}: {{ user.getUsername() }}</li>
     {% if is_western_name_order %}
-        <li>{{ 'FirstName'|get_lang }}: {{ user.getFirstName() }}</li>
-        <li>{{ 'LastName' }}: {{ user.getLastName() }}</li>
+        <li>{{ 'First name'|get_lang }}: {{ user.getFirstName() }}</li>
+        <li>{{ 'Last name' }}: {{ user.getLastName() }}</li>
     {% else  %}
-        <li>{{ 'LastName' }}: {{ user.getLastName() }}</li>
-        <li>{{ 'FirstName' }}: {{ user.getFirstName() }}</li>
+        <li>{{ 'Last name' }}: {{ user.getLastName() }}</li>
+        <li>{{ 'First name' }}: {{ user.getFirstName() }}</li>
     {% endif %}
-    <li>{{ 'Email'|get_lang }}: {{ user.getEmail() }}</li>
+    <li>{{ 'e-mail'|get_lang }}: {{ user.getEmail() }}</li>
     <li>{{ 'Status'|get_lang }}: {{ user.getStatus() }}</li>
 </ul>
-<p>{{ 'ManageUser'|get_lang }}: <a href="{{ manageUrl }}">{{ manageUrl }}</a></p>
+<p>{{ 'Manage user'|get_lang }}: <a href="{{ manageUrl }}">{{ manageUrl }}</a></p>
