--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -646,6 +646,14 @@ form .field {
   margin-right: 1rem;
 }
 
+#legacy_content {
+  .exercise-overview {
+    padding: 30px 10px 60px;
+  }
+  .question-result {
+    padding-top: 30px;
+  }
+}
 //@import 'primevue-md-light-indigo/theme.css';
 //@import '~primevue/resources/primevue.min.css';
 //@import '~primeflex/primeflex.css';
