Display: Add styles for BaseChip component - refs BT#21705

--- a/assets/css/scss/index.scss
+++ b/assets/css/scss/index.scss
@@ -36,6 +36,7 @@
 @import "atoms/toast";
 @import "atoms/wysiwyg";
 
+@import "molecules/chip";
 @import "molecules/course_tool";
 @import "molecules/datepicker";
 @import "molecules/empty_state";
