--- a/assets/css/scss/index.scss
+++ b/assets/css/scss/index.scss
@@ -76,6 +76,7 @@
 @import 'catalog_session';
 //@import 'jqueryui';
 @import 'lp';
+@import "messages";
 @import "userreluser";
 @import 'social';
 @import 'skill';
