Display: Fix show page when message has no tags - refs BT#21705

--- a/assets/css/scss/_messages.scss
+++ b/assets/css/scss/_messages.scss
@@ -9,6 +9,10 @@
     @apply flex justify-end gap-2 items-center;
   }
 
+  &__tags {
+    @apply flex gap-2;
+  }
+
   &__tag-searcher.field {
     @apply mb-0;
   }
