Internal: Add hover effects and pointer cursor to buttons - refs BT#21806

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -718,6 +718,32 @@ form .field {
     @apply flex flex-row flex-wrap;
   }
 }
+
+.btn:hover {
+  cursor: pointer;
+  color: #fff;
+}
+
+.btn.btn--success.btn-large:hover {
+  background-color: #28a745;
+}
+
+.btn.btn--warning.question-validate-btn:hover {
+  background-color: #ffc107;
+}
+
+.btn.btn--info:hover {
+  background-color: #17a2b8;
+}
+
+.btn.btn--success:hover {
+  background-color: #28a745;
+}
+
+.btn.btn--danger:hover {
+  background-color: #dc3545;
+}
+
 //@import 'primevue-md-light-indigo/theme.css';
 //@import '~primevue/resources/primevue.min.css';
 //@import '~primeflex/primeflex.css';
